<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="353dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:src="@drawable/faiz" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cdScroll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLatihanScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:text="@string/textJudul"
                    android:textColor="@color/steelblue"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/textDescription"
                    android:textSize="20sp"
                    android:visibility="visible" />

        </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cdScroll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:drawableLeft="@drawable/ic_instagram"
                        android:drawableRight="@drawable/ic_next"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:drawablePadding="7dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/instagram"
                        android:textAlignment="inherit"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtGithub"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:drawableLeft="@drawable/ic_github"
                        android:drawableRight="@drawable/ic_next"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:drawablePadding="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/github"
                        android:textAlignment="inherit"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtWa"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:drawableLeft="@drawable/ic_whatsapp"
                        android:drawableRight="@drawable/ic_next"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:drawablePadding="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/wa"
                        android:textAlignment="inherit"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtRating"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:drawableLeft="@drawable/ic_rate"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:drawablePadding="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/rating"
                        android:textAlignment="inherit"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtShare"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:drawableLeft="@drawable/ic_share"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:drawablePadding="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/share"
                        android:textAlignment="inherit"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtPolicy"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/click"
                        android:drawableLeft="@drawable/ic_policy"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:drawablePadding="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/policy"
                        android:textAlignment="inherit"
                        android:textSize="20sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/txtcopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/copyright"
                android:textSize="15dp"
                android:textAlignment="center"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>